force-app/main/default/objects/Catalog__c/Catalog__c.object-meta.xml
<CustomObject>
    <label>Catalog</label>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>