force-app/main/default/objects/Catalog__c/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Catalog</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipLabel>Catalog</relationshipLabel>
    <relationshipName>Catalog</relationshipName>
    <type>Lookup</type>
</CustomField>