force-app/main/default/objects/Catalog__c/fields/Subscription_colour__c.field-meta.xml
<CustomField>
    <fullName>Subscription_colour__c</fullName>
    <label>Subscription colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#FFD700</fullName>
                <label>Gold</label>
            </value>
            <value>
                <fullName>#C0C0C0</fullName>
                <label>Silver</label>
            </value>
            <value>
                <fullName>#CD7F32</fullName>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>#b9f2ff</fullName>
                <label>Diamond</label>
            </value>
            <value>
                <fullName>#002970</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>#800080</fullName>
                <label>purple</label>
            </value>
            <value>
                <fullName>#F89880</fullName>
                <label>Pink Orange</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>