force-app/main/default/objects/Catalog__c/validationRules/Prirorynumbersacepting.validationRule-meta.xml
<ValidationRule>
    <fullName>Prirorynumbersacepting</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Priority__c,&quot;^[0-9]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>Fill only Numbers</errorMessage>
</ValidationRule>